--- a/Дым/ru.lproj/Main.storyboard
+++ b/Дым/ru.lproj/Main.storyboard
@@ -180,10 +180,10 @@
             </objects>
             <point key="canvasLocation" x="3954" y="-650"/>
         </scene>
-        <!--View Controller-->
+        <!--Contacts Segments View Controller-->
         <scene sceneID="GW4-cJ-zQm">
             <objects>
-                <viewController id="C85-Eu-evA" sceneMemberID="viewController">
+                <viewController id="C85-Eu-evA" customClass="ContactsSegmentsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="OPg-y9-KtE"/>
                         <viewControllerLayoutGuide type="bottom" id="0kG-Mz-bjM"/>
@@ -202,12 +202,70 @@
                                 <segment title="Как найти"/>
                                 <segment title="Наша команда"/>
                             </segments>
+                            <connections>
+                                <action selector="indexDidChangeForSelectedControl:" destination="C85-Eu-evA" eventType="valueChanged" id="Sob-vs-FpK"/>
+                            </connections>
                         </segmentedControl>
                     </navigationItem>
+                    <connections>
+                        <outlet property="switchVCOutlet" destination="mt8-Zs-BTZ" id="AGb-3y-8Df"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Pd-fi-aXR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3006" y="0.0"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="6l5-CV-wGC">
+            <objects>
+                <viewController storyboardIdentifier="howto-find" id="zi5-2h-DNr" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DZH-4u-gSS"/>
+                        <viewControllerLayoutGuide type="bottom" id="GI2-Xk-yjQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qFx-LR-Yad">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="howto-find" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="34z-x6-21V">
+                                <rect key="frame" x="32" y="330" width="84" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yu4-rI-04w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3784" y="327"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="2fv-Hd-TqD">
+            <objects>
+                <viewController storyboardIdentifier="our-team" id="JkZ-Df-xwR" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qhc-hj-DZu"/>
+                        <viewControllerLayoutGuide type="bottom" id="G2g-AV-Hqv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vVA-js-GNP">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="our-team" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obD-P6-abQ">
+                                <rect key="frame" x="58" y="356" width="71" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OYK-Kr-qPx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4446" y="327"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
